# bangbang

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
compat/firecracker/v1.16.0/: README.md  balloon-contract.md  capabilities.json  cpu-template-contract.md  device-hotplug-contract.md  entropy-contract.md  isolation-contract.md  machine-lifecycle-audit.md  machine-memory-contract.md  memory-hotplug-contract.md  network-mmds-contract.md  process-contract.md  remaining-device-contract.md  serial-contract.md  snapshot-paging-contract.md  source-manifest.json  storage-contract.md  time-identity-contract.md  vsock-contract.md
crates/api/: Cargo.toml
crates/api/src/: http.rs  lib.rs  route.rs
crates/bangbang/: Cargo.toml
crates/bangbang/src/: anchored_socket.rs  api_server.rs  contained_session.rs  direct_snapshot_pager.rs  direct_vhost_user.rs  grant_integration_probe.rs  host_network.rs  main.rs  periodic_metrics.rs  test_support.rs  vmm.rs  vsock_restore.rs
crates/bangbang/src/host_network/: virtio_vmnet.rs  vmnet.rs
crates/bangbang/tests/: app_sandbox_process_e2e.rs  executable_hvf_e2e.rs  process_e2e.rs
crates/bangbang/tests/support/: mod.rs  vhost_user_block.rs
crates/hvf/: Cargo.toml  build.rs
crates/hvf/native/: availability.c  mach_lazy_fault.c  mach_lazy_fault_test_support.c  simd_fp.c
crates/hvf/src/: backend.rs  cache.rs  coordinator.rs  cpu_template.rs  dirty.rs  exit.rs  ffi.rs  gic.rs  lazy_guest_fault.rs  lazy_host_fault.rs  lazy_pager.rs  lib.rs  mach_lazy.rs  memory.rs  mmio.rs  optional_state.rs  psci.rs  pvtime.rs  runner.rs  session_vcpu.rs  sme.rs  snapshot.rs  snapshot_bundle.rs  snapshot_restore.rs  startup.rs  topology.rs  vcpu.rs  vcpu_config.rs
crates/hvf/tests/: guest_boot.rs  guest_boot_smoke.rs  hvf_lifecycle.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: error.rs  grant_manifest.rs  launch_policy.rs  layout.rs  lib.rs  main.rs  package.rs  package_options.rs  package_unsupported.rs  provisioning_profile.rs  supervisor.rs
crates/launcher/src/macos/: block_control.rs  block_device.rs  code_sign.rs  daemon.rs  local_socket.rs  mod.rs  publish.rs  socket_broker.rs  spawn.rs  supervise.rs  vhost_user_broker.rs
crates/launcher/tests/: production_bundle_e2e.rs
crates/pager/: Cargo.toml
crates/pager/src/: client.rs  error.rs  frame.rs  lib.rs  reference.rs  state.rs  transport.rs
crates/pager/tests/: protocol_process.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: balloon.rs  block.rs  boot.rs  boot_timer.rs  cpu.rs  entropy.rs  fdt.rs  interrupt.rs  lazy_memory.rs  lib.rs  logger.rs  machine.rs  memory.rs  memory_dirty.rs  memory_hotplug.rs  message_interrupt.rs  metrics.rs  mmds.rs  mmds_network.rs  mmds_stack.rs  mmds_token.rs  mmio.rs  network.rs  network_packet.rs  output_file.rs  pci.rs  pmem.rs  pvtime.rs  rtc.rs  serial.rs  snapshot.rs  snapshot_artifact.rs  snapshot_commit.rs  snapshot_device.rs  snapshot_format.rs  snapshot_format_v2.rs  snapshot_memory.rs  snapshot_memory_v2.rs  startup.rs  storage_capture.rs  (+7 more)
crates/runtime/src/block/: async_executor.rs
crates/runtime/src/mmds_tcp/: NOTICE.md  connection.rs  endpoint.rs  handler.rs  mod.rs  segment.rs  tests.rs
crates/runtime/src/snapshot_artifact/: macos.rs  tests.rs
crates/runtime/src/snapshot_format_v2/: tests.rs
crates/runtime/src/snapshot_memory_v2/: tests.rs
crates/runtime/src/vsock/: direct_restore.rs
crates/session/: Cargo.toml
crates/session/src/: codec.rs  grant.rs  lib.rs  macos.rs  state.rs
crates/session/src/macos/: block_control.rs  bookmark.rs  grant_registry.rs  grant_transport.rs  runtime.rs  socket_broker.rs  vhost_user_broker.rs
crates/vhost-user/: Cargo.toml
crates/vhost-user/src/: error.rs  frontend.rs  lib.rs  message.rs  notifier.rs  transport.rs
docs/: firecracker-compatibility.md  firecracker-validation-matrix.md  pull-request-workflow.md  review-guidelines.md  security.md  snapshot-feasibility.md  snapshot-pager-protocol.md  testing.md
packaging/macos/: Bangbang-Info.plist  BangbangWorker-Info.plist  BangbangWorker.entitlements.plist
scripts/: build-guest-boot-initrd.py  build-production-bundle.sh  build-signed-bangbang.sh  fetch-firecracker-kernel.sh  fetch-firecracker-rootfs.sh  preflight-production-vmnet.sh  run-guest-boot-smoke.sh  run-guest-boot-tests.sh  run-hvf-tests.sh  run-integration-tests.sh  run-signed-process-tests.sh  sign-app-sandbox-bundle.sh  sign-hvf-binary.sh
scripts/app-sandbox/: bangbang-Info.plist  hvf-lifecycle-Info.plist
scripts/guest/: arm64-id-register-report.rs
tests/support/: macos_virtual_block.rs  snapshot_pager.rs  vhost_user_block.rs
tools/firecracker-capability-audit/: Cargo.toml
tools/firecracker-capability-audit/src/: lib.rs  main.rs  model.rs  upstream.rs  validate.rs
tools/firecracker-capability-audit/tests/: checked_inventory.rs
tools/seccompiler/: Cargo.toml
tools/seccompiler/data/: README.md  libseccomp-v2.6.0-syscalls.csv
tools/seccompiler/scripts/: reduce-libseccomp-syscalls.awk
tools/seccompiler/src/: artifact.rs  bin.rs  bpf.rs  compiler.rs  lib.rs  schema.rs  syscalls.rs  tool.rs
tools/seccompiler/tests/: cli.rs  invalid.rs  semantics.rs
tools/seccompiler/tests/support/: mod.rs
