[workspace]
members = [
    "crates/api",
    "crates/hvf",
    "crates/runtime",
    "crates/bangbang",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/seven332/bangbang"

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
