[package]
name = "bangbang"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bangbang-api = { path = "../api" }
bangbang-hvf = { path = "../hvf" }
bangbang-runtime = { path = "../runtime" }
block2 = "0.6.2"
dispatch2 = "0.3.1"
libc = "0.2"
signal-hook = "0.3"

[lints]
workspace = true
