[package]
name = "bangbang"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bangbang-api = { path = "../api" }
bangbang-hvf = { path = "../hvf" }
bangbang-runtime = { path = "../runtime" }
bangbang-session = { path = "../session" }
block2 = "0.6.2"
dispatch2 = "0.3.1"
libc = "0.2"
serde = "1"
serde_json = "1"
signal-hook = "0.3"
signal-hook-registry = "1"

[dev-dependencies]
crc64 = "2.0.0"

[[test]]
name = "executable_hvf_e2e"
path = "tests/executable_hvf_e2e.rs"
test = false

[[test]]
name = "app_sandbox_process_e2e"
path = "tests/app_sandbox_process_e2e.rs"
test = false

[lints]
workspace = true
