[package]
name = "bangbang-hvf"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bangbang-pager = { path = "../pager" }
bangbang-runtime = { path = "../runtime" }
libc = "0.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
device_tree = "1.1.0"
plist = "1"
serde_json = "1.0.140"

[[test]]
name = "guest_boot"
path = "tests/guest_boot.rs"
test = false

[[test]]
name = "hvf_lifecycle"
path = "tests/hvf_lifecycle.rs"
test = false

[lints]
workspace = true
