[package]
name = "bangbang-launcher"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bangbang-session = { path = "../session" }
libc = "0.2"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"

[dev-dependencies]
bangbang-pager = { path = "../pager" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
bangbang-runtime = { path = "../runtime" }

[[bin]]
name = "bangbang-launcher"
path = "src/main.rs"

[[bin]]
name = "bangbang-bundle"
path = "src/bin/bangbang-bundle.rs"

[[test]]
name = "production_bundle_e2e"
path = "tests/production_bundle_e2e.rs"
test = false

[lints]
workspace = true
