[package]
name = "bangbang-runtime"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bangbang-vhost-user = { path = "../vhost-user" }
crc64 = "2.0.0"
getrandom = "0.3"
libc = "0.2"
serde_json = "1.0.140"
vm-fdt = "0.3.0"

[dev-dependencies]
device_tree = "1.1.0"

[lints]
workspace = true
