[package]
name = "bangbang-runtime"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = { version = "0.11.0", default-features = false, features = ["aes", "zeroize"] }
bangbang-vhost-user = { path = "../vhost-user" }
base64 = "0.22.1"
crc64 = "2.0.0"
getrandom = "0.3"
libc = "0.2"
serde_json = "1.0.140"
vm-fdt = "0.3.0"
zeroize = "1.8.1"

[dev-dependencies]
device_tree = "1.1.0"
vm-superio = "0.8.1"

[lints]
workspace = true
