[package]
name = "bangbang-seccompiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
bitcode = { version = "=0.6.9", features = ["serde"] }
clap = { version = "=4.6.1", features = ["derive", "string"] }
rustix = { version = "=1.1.4", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "seccompiler-bin"
path = "src/bin.rs"

[lints]
workspace = true
